# mlproject

./: .gitignore  Dockerfile  Dockerfile.ui  README.md  application.py  docker-compose.yml  main.py  prediction_gui.py  pyproject.toml  requirements.txt  setup.py
.ebextensions/: python.config
artifacts/: model.pkl  preprocessor.pkl
notebook/: EDA_Student_performance.ipynb
src/: exception.py  logger.py  utils.py
src/components/: data_ingestion.py  data_transformation.py  model_trainer.py
