[project]
name = "students-score-prediction"
version = "0.1.0"
description = "FastAPI inference API and Streamlit UI for predicting student math scores"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "kamran", email = "kamranakmal6776@gmail.com"}
]
dependencies = [
    "catboost>=1.2.8",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "fastapi>=0.115.0",
    "fonttools==4.61.0",
    "joblib==1.5.2",
    "kiwisolver==1.4.9",
    "matplotlib==3.10.7",
    "numpy==2.3.5",
    "packaging==25.0",
    "pandas==2.3.3",
    "pillow==12.0.0",
    "pydantic>=2.0.0",
    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "requests>=2.32.0",
    "scikit-learn==1.7.2",
    "scipy==1.16.3",
    "seaborn==0.13.2",
    "setuptools==80.9.0",
    "six==1.17.0",
    "streamlit>=1.40.0",
    "threadpoolctl==3.6.0",
    "tzdata==2025.2",
    "uvicorn>=0.32.0",
    "xgboost>=3.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
